<resources>

    <!-- App Name String -->
    <string name="app_name">Distract Me</string>

    <!-- Tab Text Strings -->
    <string name="tab_text_1">News</string>
    <string name="tab_text_2">Web</string>
    <string name="tab_text_3">Filter</string>
    <string name="tab_text_4">Saved</string>

    <!-- News Endpoint Filter By Strings -->
    <string name="top_headlines">Top Headlines</string>
    <string name="everything">Everything</string>

    <!-- Filter By Strings -->
    <string name="top_headlines_by_country">By Country</string>
    <string name="top_headlines_by_source">By Source</string>
    <string name="top_headlines_by_country_and_category">By Country And Category</string>
    <string name="top_headlines_by_subject">By Subject</string>

    <!-- Questions For Filters Strings -->
    <string name="which_endpoint_top_headlines">What news did you want to see by top headlines?</string>
    <string name="grab_all_news_by">Which topic would you like to grab all news by?</string>
    <string name="which_category_to_filter_by">Which category of news did you want to filter by?</string>
    <string name="country_categories">Which country would you like to filter by?</string>
    <string name="subject_filter">What subject would you like to filter by(enter subject below)?</string>
    <string name="categories_filter">Which category of news would you like to filter by?</string>
    <string name="source_categories_top_headlines">Which source would you like to filter by?</string>
    <string name="nothing">None</string>

    <!-- Filter Categories Strings -->
    <string name="business_category">business</string>
    <string name="entertainment_category">entertainment</string>
    <string name="general_category">general</string>
    <string name="health_category">health</string>
    <string name="science_category">science</string>
    <string name="sports_category">sports</string>
    <string name="technology_category">technology</string>

    <!-- Elements/ Components Desc Strings -->
    <string name="app_name_splash_desc">This is the splash screen title, which is Distract Me.</string>
    <string name="app_splash">Splash Screen For Distract Me</string>
    <string name="title_article_desc">Here is the title for the set article.</string>
    <string name="like_image_view">Like Image view text.</string>

    <!-- Filler Text Strings -->
    <string name="desc_article_text">Here is the desc for the set article.</string>
    <string name="latin_text_filler">Lorem ipsum dolor sit amet, mel debitis eleifend tincidunt te, cu sea debet volumus argumentum. At duo rebum nominavi, te posse reprimique duo…</string>

    <!-- Dialog Set Timer Strings -->
    <string name="dialog_lets_get_distracted_text">Lets Get Distracted</string>
    <string name="dialog_how_long_text">How long did you want to be distracted for?</string>
    <string name="dialog_current_time_set_default_text">Current Time Set: 3:22</string>
    <string name="dialog_confirm_text">CONFIRM</string>
    <string name="dialog_dont_show_me_again_text">DONT SHOW ME AGAIN</string>

    <!-- Default Times Strings -->
    <string name="default_time_one">01:00</string>
    <string name="default_time_two">02:00</string>
    <string name="default_time_three">05:00</string>
    <string name="default_time_four">10:00</string>
    <string name="custom_time">Set Custom Time</string>

    <string name="edit_btn_text">Edit</string>
    <string name="pause_btn_text">Pause</string>
    <string name="play_btn_text">Play</string>
    <string name="stop_btn_text">Stop</string>

    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="how_many_minutes_did_you_want">How many minutes do you want to set?</string>
    <string name="how_many_seconds_did_you_want">How many seconds do you want to set?</string>

    <string name="times_up_text">Times Up!</string>
    <string name="times_up_desc">Sorry you have ran out of time! Would you like to extend your time? If you select NO the app will close!</string>
    <string name="times_up_yes_extend">YES</string>
    <string name="times_up_no_extend">NO</string>

    <string name="no_results_found_text">No Results Found: Please Select View More On A Article</string>
    <string name="no_saved_articles">You currently do not have any saved articles.</string>

    <string name="yes_dialog_text">Yes</string>
    <string name="no_dialog_text">No</string>

</resources>
