<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cnsHomeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/default_margin_or_padding"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivArticle"
        android:layout_width="@dimen/iv_circle_default_size"
        android:layout_height="@dimen/iv_circle_default_size"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvArticleTitle"
        android:contentDescription="@string/title_article_desc"
        android:ems="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/default_header_tv_size"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        app:layout_constraintStart_toEndOf="@+id/ivArticle"
        app:layout_constraintTop_toTopOf="@+id/ivArticle" />

    <TextView
        android:id="@+id/tvArticleDesc"
        android:contentDescription="@string/desc_article_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        android:ems="17"
        android:text="@string/latin_text_filler"
        app:layout_constraintStart_toStartOf="@+id/tvArticleTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

    <ImageView
        android:id="@+id/ivLike"
        android:contentDescription="@string/like_image_view"
        android:layout_width="@dimen/iv_like_default_size"
        android:layout_height="@dimen/iv_like_default_size"
        android:layout_marginTop="@dimen/margin_top_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArticleDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>