<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTimesUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:textSize="@dimen/default_header_tv_size"
        android:text="@string/times_up_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContinueOrNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:textSize="@dimen/default_body_tv_size"
        android:text="@string/times_up_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimesUp" />

    <TextView
        android:id="@+id/tvYesExtend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:text="@string/times_up_yes_extend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContinueOrNot" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_or_padding"
        android:layout_marginTop="@dimen/default_margin_or_padding"
        android:layout_marginLeft="@dimen/default_margin_or_padding"
        android:text="@string/times_up_no_extend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYesExtend" />

    <ImageView
        android:id="@+id/ivExtendDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/colorPrimary"
        android:layout_marginRight="@dimen/default_margin_or_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>